@@ -24,6 +24,9 @@ version 1.0.
 1.1
 ---
 
+- Add a define OMPI_SKIP_CXX to allow the user to skip the mpicxx.h from
+  being included in mpi.h. It allows the user to compile C code with a CXX
+  compiler without including the CXX bindings.
 - The PERUSE support is now available directly on the trunk. In order to
   activate it add --enable-peruse to the configure options. All events
   described in the PERUSE 2.0 draft are supported, plus one Open MPI
